Feat/list filtering (#90)
* Add list sorting

* Add list filtering

* Fix and update filtering

* Update swagger

* Create 20250526172123_rename_port_table_to_ports.sql

* Add migration to update port names.

* Remove port routes

---------
